updated recent events

--- a/source/index.html
+++ b/source/index.html
@@ -150,22 +150,12 @@
 	<h1 class="center">Recent Events</h1>
 	<hr>
 	<div class="row-fluid mbot">
-
         <div class="span4">
-            <a href="e_2016fishing.html" class="box_link">
+            <a href="e_2019cny.html" class="box_link">
             <div class="box">
-                <p><img src="images/event_thumb/2016/2016-fishing.jpg" alt="" ></p>
-                <h5>Fishing Trip</h5>
-                <p>Fishing outing at Captree State Park and dinner at Flushing NY</p>
-            </div>
-            </a>
-        </div>
-        <div class="span4">
-            <a href="e_2016-fort-lee.html" class="box_link">
-            <div class="box">
-                <p><img src="images/event_thumb/2016/2016-fort-lee-hiking.jpg" alt="" ></p>
-                <h5>Hiking at Fort Lee</h5>
-                <p>Hiking and dinner at Fort Lee, NJ</p>
+                <p><img src="images/event_thumb/2019/2019cny.jpg" alt="" ></p>
+                <h5>Chinese New Year 2019</h5>
+                <p>Chinese New Year dinner in Chinatown NYC</p>
             </div>
             </a>
         </div>
