--- a/source/committee.html
+++ b/source/committee.html
@@ -74,7 +74,7 @@
 
 <section id="about-us" class="container main">
 	<!-- Meet the team -->
-	<h1 class="center">2016 Executive Committee Members</h1>
+	<h1 class="center">2024 Executive Committee Members</h1>
 	<hr>
     <div class="row-fluid">
         <!-- Left Column -->
@@ -84,10 +84,10 @@
             <li>Chairman</li>
             <li>Vice Chairman</li>
             <li>Vice Chairman</li>
+            <li>Vice Chairman</li>
             <li>Treasurer</li>
             <li>Committee Member</li>
             <li>Committee Member</li>
-            <li>Consultant</li>
         </ul>
         </div>
         <!-- /Left Column -->
@@ -99,10 +99,10 @@
             <li>Angelie Cheung</li>
             <li>Margaret So</li>
             <li>Kaufman Ng</li>
+            <li>Chris Ng</li>
             <li>Patrick Lee</li>
             <li>Sarah So</li>
             <li>Caroline Wong</li>
-            <li>Elizabeth Hung</li>
          </ul>
         </div>
         <!-- /Right Column -->
@@ -122,7 +122,7 @@
     <div class="container">
         <div class="row-fluid">
             <div class="span5 cp">
-                &copy; 2016 SPCCAANY. All Rights Reserved.
+                &copy; 2024 SPCCAANY. All Rights Reserved.
             </div>
             <!--/Copyright-->
 
