updated committee list

--- a/source/committee.html
+++ b/source/committee.html
@@ -84,8 +84,9 @@
             <li>Chairman</li>
             <li>Vice Chairman</li>
             <li>Vice Chairman</li>
-            <li>Vice Chairman</li>
             <li>Treasurer</li>
+            <li>Committee Member</li>
+            <li>Committee Member</li>
             <li>Committee Member</li>
             <li>Committee Member</li>
         </ul>
@@ -99,10 +100,11 @@
             <li>Angelie Cheung</li>
             <li>Margaret So</li>
             <li>Kaufman Ng</li>
-            <li>Chris Ng</li>
             <li>Patrick Lee</li>
+            <li>Chris Ng</li>
             <li>Sarah So</li>
             <li>Caroline Wong</li>
+            <li>Chi Wai Lee</li>
          </ul>
         </div>
         <!-- /Right Column -->
